trying to fix netlify admin page

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -47,7 +47,16 @@ collections:
             }
           - { label: Title, name: title, widget: string }
           - { label: Image, name: image, widget: image }
-          - { label: Circleimage, name: circleimage, widget: image }
+          - {
+              label: Circleimage,
+              name: circleimage,
+              widget: object,
+              fields:
+                [
+                  { label: Image, name: image, widget: image },
+                  { label: Alt, name: alt, widget: string },
+                ],
+            }
           - { label: Heading, name: heading, widget: string }
           - { label: Subheading, name: subheading, widget: string }
           - {
