--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "node-sass": "^4.14.0",
     "prop-types": "^15.6.0",
     "react": "^16.8.4",
+    "react-device-detect": "^1.13.1",
     "react-dom": "^16.8.4",
     "react-helmet": "^6.0.0",
+    "react-resize-detector": "^5.0.6",
+    "three": "^0.117.1",
     "uuid": "^7.0.0"
   },
   "keywords": [
