--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -57,6 +57,16 @@ collections:
                   { label: Alt, name: alt, widget: string },
                 ],
             }
+          - {
+              label: Teamimage,
+              name: teamimage,
+              widget: object,
+              fields:
+                [
+                  { label: Image, name: image, widget: image },
+                  { label: Alt, name: alt, widget: string },
+                ],
+            }
           - { label: Heading, name: heading, widget: string }
           - { label: Subheading, name: subheading, widget: string }
           - {
@@ -142,6 +152,35 @@ collections:
             }
           - { label: "Title", name: "title", widget: "string" }
           - { label: "Body", name: "body", widget: "markdown" }
+      - file: "src/pages/being/index.md"
+        label: "Being"
+        name: "being"
+        fields:
+          - {
+              label: "Template Key",
+              name: "templateKey",
+              widget: "hidden",
+              default: "being-page",
+            }
+          - { label: "Title", name: "title", widget: "string" }
+          - { label: "Body", name: "body", widget: "markdown" }
+      - file: "src/pages/reaching/index.md"
+        label: "Reaching"
+        name: "reaching"
+        fields:
+          - {
+              label: "Template Key",
+              name: "templateKey",
+              widget: "hidden",
+              default: "reaching-page",
+            }
+          - { label: "Title", name: "title", widget: "string" }
+          - { label: "Publish Date", name: "date", widget: "datetime" }
+          - { label: "Description", name: "description", widget: "text" }
+          - { label: "Featured Post", name: "featuredpost", widget: "boolean" }
+          - { label: "Featured Image", name: "featuredimage", widget: image }
+          - { label: "Body", name: "body", widget: "markdown" }
+          - { label: "Tags", name: "tags", widget: "list" }
       - file: "src/pages/products/index.md"
         label: "Products Page"
         name: "products"
