--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -185,12 +185,18 @@ collections:
               default: "reaching-page",
             }
           - { label: "Title", name: "title", widget: "string" }
-          - { label: "Publish Date", name: "date", widget: "datetime" }
-          - { label: "Description", name: "description", widget: "text" }
-          - { label: "Featured Post", name: "featuredpost", widget: "boolean" }
-          - { label: "Featured Image", name: "featuredimage", widget: image }
           - { label: "Body", name: "body", widget: "markdown" }
           - { label: "Tags", name: "tags", widget: "list" }
+          - {
+              label: Navigation Image,
+              name: navimage,
+              widget: object,
+              fields:
+                [
+                  { label: Navigation Image, name: image, widget: image },
+                  { label: Image Alt, name: alt, widget: string },
+                ],
+            }
       - file: "src/pages/products/index.md"
         label: "Products Page"
         name: "products"
