--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -186,6 +186,28 @@ collections:
                   { label: Image Alt, name: alt, widget: string },
                 ],
             }
+      - file: "src/pages/doing/negev/location.md"
+        label: "Doing - Negev - Location"
+        name: "doing-negev-location"
+        fields:
+          - {
+              label: "Template Key",
+              name: "templateKey",
+              widget: "hidden",
+              default: "doing-page",
+            }
+          - { label: "Title", name: "title", widget: "string" }
+          - { label: "Body", name: "body", widget: "markdown" }
+          - {
+              label: Navigation Image,
+              name: navimage,
+              widget: object,
+              fields:
+                [
+                  { label: Navigation Image, name: image, widget: image },
+                  { label: Image Alt, name: alt, widget: string },
+                ],
+            }
       - file: "src/pages/doing/sinai.md"
         label: "Doing - Sinai"
         name: "doing-sinai"
