--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "node-sass": "^4.14.0",
     "prop-types": "^15.6.0",
     "react": "^16.8.4",
-    "react-device-detect": "^1.13.1",
     "react-dom": "^16.8.4",
     "react-helmet": "^6.0.0",
     "react-resize-detector": "^5.0.6",
+    "react-sizes": "^2.0.0",
     "three": "^0.117.1",
     "uuid": "^7.0.0"
   },
